--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | HCI F2</title>
+    <title>Unity WebGL Player | F2</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
-  <body>
+  <body style="background-color: #111111;">
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=540 height=960></canvas>
       <div id="unity-loading-bar">
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">HCI F2</div>
+        <div id="unity-build-title">F2</div>
       </div>
     </div>
     <script>
@@ -33,8 +33,8 @@
         frameworkUrl: buildUrl + "/Preview WebGL.framework.js",
         codeUrl: buildUrl + "/Preview WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "HCI F2",
+        companyName: "HCI",
+        productName: "F2",
         productVersion: "0.1",
       };
 
